Make the hamburger menu work with the top-navigation enabled and sidebar-navigation disabled
Rebased 7a8b3e2a0012f55ded4560030db2e2f91dbf19f4 on top of maven-fluido-skin-1.7

--- a/src/site/apt/index.apt.vm
+++ b/src/site/apt/index.apt.vm
@@ -170,7 +170,7 @@ Welcome to ${project.name}!
 
  Users can optionally enable the <<Google Search>> for the generated site, requirements are:
 
- * the <<<project.url>>> property in <<<pom.xml>>>, unless the <<<custom.fluidoSkin.googleSearch.sitesearch>>> property is set in the <<<site.xml>>>:
+ * the <<<project.url>>> property in <<<pom.xml>>>, unless the <<<custom.fluidoSkin.googleSearch.sitesearch>>> or <<<custom.fluidoSkin.googleSearch.customSearch>>> property is set in the <<<site.xml>>>:
 
 +-----+
 <project name="xxx">
@@ -196,6 +196,21 @@ Welcome to ${project.name}!
 </project>
 +-----+
 
+ * the <<<custom.fluidoSkin.customSearch>>> element in <<<site.xml>>>:
+
++-----+
+<project name="xxx">
+  [...]
+  <custom>
+    <fluidoSkin>
+      <googleSearch>
+        <customSearch>ID_from_Google</customSearch>
+      </googleSearch>
+    </fluidoSkin>
+  </custom>
+  [...]
+</project>
++-----+
  []
 
  By default, the search form:
